# BEoRN

./: .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yaml  test-install.yaml
docs/: authors.rst  citing.rst  conf.py  description.rst  index.rst  installation.rst  requirements_doc.txt  tutorials.rst
docs/examples/: 21cmfast_halos.ipynb  artificial_halos.ipynb  full_run.py  full_run_file.rst  nbody_simulation_halos.ipynb  simulation_comparison.ipynb
docs/reference/: data_structures.rst  index.rst  input_data.rst  io.rst  painting.rst  parameters.rst  plotting.rst
src/beorn/: __init__.py  alpha_fitting.py  astro.py  cloud_in_cell.py  computing_profiles.py  cosmo.py  couplings.py  excursion_set.py  functions.py  global_qty.py  gravity.py  halomassfunction.py  lightcones.py  logging.py  massaccretion.py  old.plotting.py  paint.py  param.py  parameters.py  plotting.py  profiles_on_grid.py  run.py  wrapper_21cmfast.py
src/beorn/io/: handler.py  load.py  paths.py
src/beorn/load_input_data/: alpha_fitting.py  delete.thesan.py  load.py  pkdgrav.py  thesan.py
src/beorn/painting/: __init__.py  coordinator.py  helpers.py  painter.py  painters.py  spread.py  spread_old.py
src/beorn/particle_mapping/: pylians.py
src/beorn/plotting/: __init__.py  global_signal.py  halo_mass_function.py  lightcone.py  mass_accretion.py  radiation_profiles.py  star_formation_rate.py
src/beorn/precomputation/: __init__.py  helpers.py  solver.py
src/beorn/radiation_profiles/: helpers.py  solver.py
src/beorn/structs/: __init__.py  base_struct.py  (+11 more)
