[project]
name = "BEoRN"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

# include in docs
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.15.2",
    "h5py>=3.13.0",
    "mpi4py>=4.1.1",
    "astropy>=7.0.1",
    "matplotlib>=3.10.1",
    "pylians>=0.12",
    "tools21cm>=2.2.10",
]
# end include in docs


[project.optional-dependencies]
extra = [
    "21cmfast>=3.4.0",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://beorn.cosmic-reionization.github.io"
Documentation = "https://beorn.cosmic-reionization.github.io"
Repository = "https://github.com/cosmic-reionization/beorn.git"
